Fix T49343: ImageFormatSettings were not setting their rna struct path correctly

Reviewers: brecht, mont29

Reviewed By: brecht, mont29

Subscribers: brecht, sergey

Differential Revision: https://developer.blender.org/D2228